// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render a temporary replacement in common state with edit permissions 1`] = `
<div
  className="abc-duty-details__replacement"
  data-lego="react"
  style={Object {}}
>
  <abc-duty-details__replacement-user>
    John Doe, 
    <Memo()
      end={2000-02-10T00:00:00.000Z}
      endMidnightAsPrevDay={true}
      interval="dash"
      start={2000-02-01T00:00:00.000Z}
      zone="Europe/Moscow"
    />
    <link
      key="link"
      mix={
        Object {
          "block": "abc-duty-details",
          "elem": "replacement-email",
        }
      }
      onClick={[Function]}
      tabIndex="0"
      theme="ghost"
      url="mailto:john.doe@yandex-team.ru"
    >
      john.doe@yandex-team.ru
    </link>
  </abc-duty-details__replacement-user>
  <button2
    icon={
      Object {
        "mods": Object {
          "glyph": "trash",
        },
      }
    }
    onClick={[MockFunction onDelete]}
    size="xs"
    tabIndex={0}
    theme="clear"
    view="classic"
  />
</div>
`;

exports[`Should render a temporary replacement in default state 1`] = `
<div
  className="abc-duty-details__replacement"
  data-lego="react"
  style={Object {}}
>
  <abc-duty-details__replacement-user>
    John Doe, 
    <Memo()
      end={2000-02-10T00:00:00.000Z}
      endMidnightAsPrevDay={true}
      interval="dash"
      start={2000-02-01T00:00:00.000Z}
      zone="Europe/Moscow"
    />
    <link
      key="link"
      mix={
        Object {
          "block": "abc-duty-details",
          "elem": "replacement-email",
        }
      }
      onClick={[Function]}
      tabIndex="0"
      theme="ghost"
      url="mailto:john.doe@yandex-team.ru"
    >
      john.doe@yandex-team.ru
    </link>
  </abc-duty-details__replacement-user>
</div>
`;

exports[`Should render a temporary replacement in deleted state 1`] = `
<div
  className="abc-duty-details__replacement abc-duty-details__replacement_deleted"
  data-lego="react"
  style={Object {}}
>
  <abc-duty-details__replacement-user>
    John Doe, 
    <Memo()
      end={2000-02-10T00:00:00.000Z}
      endMidnightAsPrevDay={true}
      interval="dash"
      start={2000-02-01T00:00:00.000Z}
      zone="Europe/Moscow"
    />
    <link
      key="link"
      mix={
        Object {
          "block": "abc-duty-details",
          "elem": "replacement-email",
        }
      }
      onClick={[Function]}
      tabIndex="0"
      theme="ghost"
      url="mailto:john.doe@yandex-team.ru"
    >
      john.doe@yandex-team.ru
    </link>
  </abc-duty-details__replacement-user>
</div>
`;

exports[`Should render a temporary replacement in deleted state with edit permissions 1`] = `
<div
  className="abc-duty-details__replacement abc-duty-details__replacement_deleted"
  data-lego="react"
  style={Object {}}
>
  <abc-duty-details__replacement-user>
    John Doe, 
    <Memo()
      end={2000-02-10T00:00:00.000Z}
      endMidnightAsPrevDay={true}
      interval="dash"
      start={2000-02-01T00:00:00.000Z}
      zone="Europe/Moscow"
    />
    <link
      key="link"
      mix={
        Object {
          "block": "abc-duty-details",
          "elem": "replacement-email",
        }
      }
      onClick={[Function]}
      tabIndex="0"
      theme="ghost"
      url="mailto:john.doe@yandex-team.ru"
    >
      john.doe@yandex-team.ru
    </link>
  </abc-duty-details__replacement-user>
  <button2
    icon={
      Object {
        "mods": Object {
          "glyph": "undo",
        },
      }
    }
    onClick={[MockFunction onRestore]}
    size="xs"
    tabIndex={0}
    theme="clear"
    view="classic"
  />
</div>
`;

exports[`Should render a temporary replacement in loading state with edit permissions 1`] = `
<div
  className="abc-duty-details__replacement"
  data-lego="react"
  style={Object {}}
>
  <abc-duty-details__replacement-user>
    John Doe, 
    <Memo()
      end={2000-02-10T00:00:00.000Z}
      endMidnightAsPrevDay={true}
      interval="dash"
      start={2000-02-01T00:00:00.000Z}
      zone="Europe/Moscow"
    />
    <link
      key="link"
      mix={
        Object {
          "block": "abc-duty-details",
          "elem": "replacement-email",
        }
      }
      onClick={[Function]}
      tabIndex="0"
      theme="ghost"
      url="mailto:john.doe@yandex-team.ru"
    >
      john.doe@yandex-team.ru
    </link>
  </abc-duty-details__replacement-user>
  <button2
    disabled={true}
    icon={
      Object {
        "mods": Object {
          "glyph": "trash",
        },
      }
    }
    onClick={[MockFunction onDelete]}
    size="xs"
    tabIndex={0}
    theme="clear"
    view="classic"
  />
</div>
`;
